fix css spacing, styling, button coloring and reference to selecting child elements

--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -20,6 +20,7 @@
     flex-direction: column;
     width: 70%;
     background-color: white;
+    margin-bottom: 50px;
 }
 
 #recently-played__container > h2 {
