--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -9,14 +9,13 @@ body {
     bottom: 0;
     margin: 0;
     padding: 0;
-    /* background-color: white; */
+    background-color: #f2f2f2;
     box-sizing: border-box;
 }
 
 
 #root {
     display: block;
-    /* padding-right: 1000px; */
     background-color: #f2f2f2;
 }
 
